# tankfighter

./: .gitignore  CMakeLists.txt  INSTALL  LICENSE-JONATHAN-MIT.TXT  LICENSE-REALLYFREE.TXT  LICENSES.TXT  README.md  clean.bat  clean.sh  color.cpp  color.h  commands.cpp  commands.h  controller.cpp  controller.h  coretypes.h  engine.cpp  engine.h  engine_event.cpp  engine_event.h  entity.cpp  entity.h  fc.cpp  generate_keys.cpp.sh  geometry.cpp  geometry.h  go  go.bat  image_helper.c  image_helper.h  input.cpp  input.h  joystick_controller.cpp  json.c  keybmouse_controller.cpp  keymap.json  keys.cpp.head  keys.cpp.tail  keys.h  load_map.cpp  (+28 more)
deb/: Makefile
deb/debian/: changelog.in  control  copyright  rules.in
dependencies/deb/: Makefile
dependencies/deb/fake_i386/: complete
dependencies/deb/libsfml2-2.1/debian/: changelog  control  copyright  rules  sfml2-andre-static-dependencies.patch  sfml2-andre-user-install-libdir.patch  sfml2-static.pc
dependencies/rpm/: Makefile  sfml2.spec
rpm/: release_rpm  tankfighter.spec
sprites/: .directory
sprites/.svn/: entries
sprites/.svn/text-base/: CMakeLists.txt.svn-base  MuzzleSmoke.jpg.svn-base  bloc2.png.svn-base  canon.png.svn-base  car.png.svn-base  cursor.png.svn-base  fond.png.svn-base  forceField.png.svn-base  hi128-app-ktank.png.svn-base  hi32-app-ktank.png.svn-base  mineA2.png.svn-base  smoke.jpg.svn-base  smokeB.png.svn-base
